Changelog
=========

1.0 (unreleased)
------------------

- Bootstrap: apply pagination classes for listing bars (such as for folders or
  search results). 
  [davidjb]
- Bootstrap: Modify all CSS and JS resources to use Plone's ``base`` variable,
  supplied by plone.app.theming. Without this, relative URLs result in the
  same resources being loaded on different URLs for every page request.
  [davidjb]
- Bootstrap: apply columnar classes for user dashboards. 
  [davidjb]
- Bootstrap: remove extraneous username from the personal tools menu. 
  [davidjb]
- Bootstrap: expand selectors for different button types.
  [davidjb]
- Bootstrap: improve button markup to ensure button classes are transposed
  (fixing add/edit content, and add user form issues).
  [davidjb]
- Bootstrap: tidy form field markup to make fields clear, especially when
  errors have occurred.
  [davidjb]
- Bootstrap: ensure accordions are constructed in such a way that 
  the ``parent`` data attribute is populated for nested elements. Previously,
  this would only function if the structure was ``form > fieldset``.
  [davidjb]
- Bootstrap: translate workflow states into textual emphasis classes.
  [davidjb] 
- Bootstrap: style album/thumbnail views for folders with Bootstrap markup.
  [davidjb]
- Bootstrap: style portlet management options with Bootstrap markup.
  [davidjb]
- Bootstrap: ensure *all* xi:include rules are excluded if theming
  needs to be avoided by placing the conditional statement on the
  top-level rules element. Without this, included rules are still
  applied to content, breaking unthemed pages.
  [davidjb]
- Bootstrap: convert dl form tabbing in Plone into accordions.
  [davidjb]
- Bootstrap: ensure form classes are themed. This allows form functionality
  that relies on classes (such as unload protection, KSS, etc).
  [davidjb]
- Bootstrap: ensure accordions work on tabbed forms where fieldsets
  have classes assigned.
  [davidjb]